# brain_server

./: Cargo.toml  README.md  check_ops.py  dockerfile  model_check.py
model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/variables/: variables.data-00000-of-00001  variables.index
src/: main.rs
