[package]
name = "brain_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
once_cell = "1.19.0"
polars = "0.38.3"
serde = "1.0.197"
serde_json = "1.0.115"
tensorflow = { version = "0.21.0", features = ["tensorflow_gpu"] }
tokio = { version = "1.37.0", features = ["full"] }
